web/book/tests/examples/snapshots/examples__book__syntax__quoted-identifiers__quoting-identifiers__0.snap
---
source: web/book/tests/examples/book.rs
expression: "prql target:sql.mysql\nfrom employees\nselect `first name`\n"
---
SELECT
  `first name`
FROM
  employees

