web/book/tests/examples/snapshots/examples__book__syntax__quoted-identifiers__quoting-identifiers__1.snap
---
source: web/book/tests/examples/book.rs
expression: "prql target:sql.postgres\nfrom employees\nselect `first name`\n"
---
SELECT
  "first name"
FROM
  employees

