web/book/tests/examples/snapshots/examples__book__syntax__quoted-identifiers__quoting-identifiers__2.snap
---
source: web/book/tests/examples/book.rs
expression: "from `dir/*.parquet`\n"
---
SELECT
  *
FROM
  "dir/*.parquet"

